cloudformation.json
{
    "Resources": {
        "bastion": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "config": {
                        "files": {
                            "/home/ec2-user/MyKeyPair.pem": {
                                "content": "-----BEGIN RSA PRIVATE KEY-----\nMIIEpQIBAAKCAQEAx4PUGuycCFe0G5CIgcaTtobXBHSE7CKkAxMTi+SzMhlcjNgOCOF15vfJj+Pv\n9MoxcJ5oiKge7TunEutnahJv38lSKQp4qIEo3FmFT/6nZ6AEcEOHr/A1LYCiuD1zGAa/vPZpahFE\nhA9Yel0hU6UxENdvS2VNswMgF3iB7sdANtr+eXMV/L6OQDFC7nm4iR8wfhNHH6sEM1KZKfaptVBJ\n9tTwkkvF7iLbI9m9FxF/pkwSDunva7u5x+4DBeqsJZNPtkmBmDxcGhFqBgEb4cLNmaeKyS6yrOwi\nGvwkPqW92s+JfQPEf9e2ry2OG3CEWpMqyrW7djDPTH45zHRS3gjaiQIDAQABAoIBAQCKXe/c2FmC\nI6kCMOOq9Rf+T1eRfGmvBnsusq0sqOhqB [...]
                                "mode": 400,
                                "owner": "ec2-user",
                                "group": "ec2-user"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "InstanceType": {
                    "Ref": "InstanceTypeParameter"
                },
                "ImageId": "ami-0c6b1d09930fac512",
                "KeyName": {
                    "Ref": "keynameParameter"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": true,
                        "DeviceIndex": 0,
                        "GroupSet": [
                            {
                                "Ref": "publicSubnet1SecurityGroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "publicSubnet1"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Bastion"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Sub": "#!/bin/bash -xe\nyum update -y aws-cfn-bootstrap\nyum install -y python-pip git\npip install ansible boto boto3 botocore\ngit clone https://github.com/elkouhen/k8s-deploy.git /home/ec2-user/k8s-deploy\ncd /home/ec2-user/k8s-deploy; git checkout aws\nchown -R ec2-user /home/ec2-user/k8s-deploy\n/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource bastion --region ${AWS::Region}\n/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource bastion [...]
                    }
                }
            }
        },
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VPCCidrParameter"
                }
            }
        },
        "internetGateway": {
            "Type": "AWS::EC2::InternetGateway"
        },
        "attachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "internetGateway"
                }
            }
        },
        "InstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    "k8s"
                ]
            }
        },
        "master": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "SubnetId": {
                    "Ref": "privateSubnet1"
                },
                "InstanceType": {
                    "Ref": "InstanceTypeParameter"
                },
                "ImageId": "ami-0c6b1d09930fac512",
                "KeyName": {
                    "Ref": "keynameParameter"
                },
                "IamInstanceProfile": {
                    "Ref": "InstanceProfile"
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "privateSubnet1SecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Master"
                    },
                    {
                        "Key": "kubernetes.io/cluster/k8s.melkouhen.net",
                        "Value": "owned"
                    }
                ]
            }
        },
        "nodes": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "InstanceId": {
                    "Ref": "master"
                },
                "MinSize": {
                    "Ref": "k8sMinNodeSizeParameter"
                },
                "MaxSize": {
                    "Ref": "k8sMaxNodeSizeParameter"
                },
                "VPCZoneIdentifier": [
                    {
                        "Ref": "privateSubnet1"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Node",
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": "kubernetes.io/cluster/k8s.melkouhen.net",
                        "Value": "owned",
                        "PropagateAtLaunch": true
                    }
                ]
            }
        },
        "privateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "privateSubnet1CidrParameter"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1d",
                "Tags": [
                    {
                        "Key": "kubernetes.io/cluster/k8s.melkouhen.net",
                        "Value": "owned"
                    }
                ]
            }
        },
        "privateSubnet1SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "privateSubnet1SecurityGroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": -1,
                        "FromPort": 0,
                        "ToPort": 0,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": -1,
                        "FromPort": 0,
                        "ToPort": 0,
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "privateSubnet1NatGateway": {
            "DependsOn": "attachGateway",
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "privateSubnet1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "publicSubnet1"
                }
            }
        },
        "privateSubnet1RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "privateSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "privateSubnet1RouteTable"
                },
                "SubnetId": {
                    "Ref": "privateSubnet1"
                }
            }
        },
        "privateSubnet1Route": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "privateSubnet1NatGateway"
            ],
            "Properties": {
                "RouteTableId": {
                    "Ref": "privateSubnet1RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "privateSubnet1NatGateway"
                }
            }
        },
        "privateSubnet1EIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "privateSubnet2NatGateway": {
            "DependsOn": "attachGateway",
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "privateSubnet2EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "publicSubnet2"
                }
            }
        },
        "privateSubnet2EIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "publicSubnet1RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "publicSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "publicSubnet1RouteTable"
                },
                "SubnetId": {
                    "Ref": "publicSubnet1"
                }
            }
        },
        "publicSubnet1Route": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "internetGateway",
                "attachGateway"
            ],
            "Properties": {
                "RouteTableId": {
                    "Ref": "publicSubnet1RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "internetGateway"
                }
            }
        },
        "publicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "publicSubnet1CidrParameter"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1d",
                "Tags": [
                    {
                        "Key": "kubernetes.io/cluster/k8s.melkouhen.net",
                        "Value": "owned"
                    }
                ]
            }
        },
        "publicSubnet1SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "publicSubnet1SecurityGroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": -1,
                        "FromPort": 0,
                        "ToPort": 0,
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "publicSubnet2RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "publicSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "publicSubnet2RouteTable"
                },
                "SubnetId": {
                    "Ref": "publicSubnet2"
                }
            }
        },
        "publicSubnet2Route": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "internetGateway",
                "attachGateway"
            ],
            "Properties": {
                "RouteTableId": {
                    "Ref": "publicSubnet2RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "internetGateway"
                }
            }
        },
        "publicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "publicSubnet2CidrParameter"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "us-east-1e",
                "Tags": [
                    {
                        "Key": "kubernetes.io/cluster/k8s.melkouhen.net",
                        "Value": "owned"
                    }
                ]
            }
        },
        "publicSubnet2SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "publicSubnet2SecurityGroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": -1,
                        "FromPort": 0,
                        "ToPort": 0,
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    },
    "Parameters": {
        "InstanceTypeParameter": {
            "Type": "String",
            "Default": "t2.micro",
            "AllowedValues": [
                "t2.micro",
                "t3a.medium"
            ],
            "Description": "Enter t2.micro, m1.small, or m1.large. Default is t2.micro."
        },
        "VPCCidrParameter": {
            "Type": "String",
            "Default": "10.0.0.0/16",
            "Description": "VPC CIDR"
        },
        "privateSubnet1CidrParameter": {
            "Type": "String",
            "Default": "10.0.2.0/24",
            "Description": "Private Subnet CIDR"
        },
        "privateSubnet2CidrParameter": {
            "Type": "String",
            "Default": "10.0.3.0/24",
            "Description": "Private Subnet CIDR"
        },
        "publicSubnet1CidrParameter": {
            "Type": "String",
            "Default": "10.0.0.0/24",
            "Description": "Public Subnet CIDR"
        },
        "publicSubnet2CidrParameter": {
            "Type": "String",
            "Default": "10.0.1.0/24",
            "Description": "Public Subnet CIDR"
        },
        "keynameParameter": {
            "Type": "String",
            "Default": "MyKeyPair",
            "Description": "Keyname"
        },
        "k8sMinNodeSizeParameter": {
            "Type": "Number",
            "Default": "0",
            "Description": "Number Of Nodes"
        },
        "k8sMaxNodeSizeParameter": {
            "Type": "Number",
            "Default": "1",
            "Description": "Number Of Nodes"
        }
    }
}
